
2023-01-15  Ron Norman <rjn@inglenet.com>

	* cobc.c: Make sure the 'schema' directory is created for -fsql
	* codegen.c: Verify that EXTERNAL variables have 'ename'
	* field.c (copy_into_field): If EXTERNAL set 'ename'

2022-11-26  Ron Norman <rjn@inglenet.com>

	* cobc.c,cobc.h: Add cb_keycompress flags
	* codegen.c: Emit keycompress value with cob_file_set_key
	* tree.h: add 'keycompress' to cb_alt_key
	* config.def: add 'keycompress' option
	* pplex.l,scanner.l,ppparse.y: Add code to pas thru KEYCOMPRESS value
	* parser.y: Pick up KEYCOMPRESS value to cb_alt_key for codegen

2022-11-16  Ron Norman <rjn@inglenet.com>

	* codegen.c: Fix for computing length of ODO fields
	* typeck.c: EVALUATE when possible compute the expression values once

2022-11-04  Ron Norman <rjn@inglenet.com>

	* codegen.c: For compare of unsigned numeric DISPLAY, PACKED, or COMP-6
				field to numeric literal use 'memcmp'
				Now using config option  odo-last-varlen
				Fix emitting of trace code if line# or statement type changes
	* typeck.c: Check for compare of unsigned numeric DISPLAY, PACKED or
				COMP-6 to numeric literal
				Swap operands if comparing: literal relop field

2022-11-02  Ron Norman <rjn@inglenet.com>

	* cobc.c: If -fodoslide then also set complex_odo true
	* codegen.c: If not odoslide then group is still variable size
				if it ends with OCCURS DEPENDING ON
				If a field follows ODO and not odoslide then it is fixed size

2022-10-20  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y, tree.c (cb_build_vary), tree.h: cleanup to not use
	  static variables in the parser for creation of the rw vary items

2022-10-19  Simon Sobisch <simonsobisch@gnu.org>

	* tree.h (struct cb_if): changed "is_if" integer flag to "enum
	  cob_statement statement" providing a clear context
	* tree.c (cb_build_if), tree.h, typeck.c, codegen.c (output_stmt):
	  pass and check matching statement entry instead of magic number