@@ -1,5 +1,5 @@
-## Copyright (C) 2003-2012, 2014-2017, 2019-2020 Free Software Foundation, Inc.
-## Written by Keisuke Nishida, Roger While, Simon Sobisch, Edward Hart
+## Copyright (C) 2003-2012, 2014-2017, 2019-2023 Free Software Foundation, Inc.
+## Written by Keisuke Nishida, Roger While, Simon Sobisch, Edward Hart, Ron Norman
 ## 
 ## This file is part of GnuCOBOL.
 ## 
@@ -549,3 +549,127 @@ AT_CHECK([$COMPILE prog.cob], [0], [], [])
 AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [Hi, there!])
 
 AT_CLEANUP
+
+AT_SETUP([Check Subscripts])
+AT_KEYWORDS([SUBSCRIPT])
+
+AT_DATA([prog.cob], [       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog.
+       DATA DIVISION.
+       WORKING-STORAGE SECTION.
+       01  BINB   PIC 9(9) COMP-5 VALUE 42.
+       01  NIDX   PIC S99.
+       01  MYIDX  USAGE IS INDEX.
+       01  MAXIDX PIC 9999 VALUE 3 COMP-5.
+       01  TBL.
+           05  FILLER PIC X(8) VALUE "Fred".
+           05  FILLER PIC X(8) VALUE "Barney".
+           05  FILLER PIC X(8) VALUE "Wilma".
+           05  FILLER PIC X(8) VALUE "Betty".
+       01  FILLER REDEFINES TBL.
+           05  MYNAME PIC X(8) OCCURS 4 INDEXED BY IB1.
+       01  TBL2.
+           05  MYMRK  PIC X(3) 
+               OCCURS 2 TO 5 DEPENDING ON MAXIDX
+               INDEXED BY IB2.
+       PROCEDURE DIVISION.
+           MOVE 5 TO MAXIDX
+           SET NIDX TO IB1.
+           DISPLAY "Initial value: " NIDX.
+           SET IB2 TO 0.2.
+           SET IB2 TO "fred".
+           SET IB2 TO 10.
+           MOVE "A:" TO MYMRK (1)
+           MOVE "B:" TO MYMRK (2)
+           MOVE "C:" TO MYMRK (3)
+           MOVE "D:" TO MYMRK (4)
+           MOVE "E:" TO MYMRK (5)
+           MOVE 3 TO MAXIDX.
+           CALL "SUBN" USING BY VALUE BINB.
+           SET IB1 TO 2.
+      * MF: Passing INDEX as CALL parameter is an error
+      *    CALL "SUBN" USING BY VALUE IB1.
+
+      * MF: Passing INDEX as DISPLAY parameter is an error
+      *    SET MYIDX TO IB1
+      *    DISPLAY  MYIDX
+
+           SET MYIDX TO IB1.
+           CALL "SUBN" USING BY VALUE MYIDX.
+           SET IB1 TO 1.
+           SET MYIDX TO IB1.
+           CALL "SUBN" USING BY VALUE MYIDX.
+           SET IB1, IB2 TO 4.
+           SET IB2 TO MAXIDX.
+           SET IB1, IB2 UP BY 1.
+           SET IB1 TO 3.
+           SET MYIDX TO IB1.
+           CALL "SUBN" USING BY VALUE MYIDX.
+           MOVE -1 TO NIDX
+           SET IB1 TO NIDX.
+           SET IB1 TO -9.
+           SET IB1 TO 300.
+           MOVE 400 TO IB1.
+      *    MOVE -1 TO NIDX
+      *    DISPLAY NIDX ": " MYNAME (NIDX) " ... The Begin!".
+           PERFORM VARYING IB1 FROM 1 BY 1 UNTIL IB1 > 4
+               SET IB2   TO IB1
+               SET NIDX  TO IB1
+               SET MYIDX TO IB1
+               DISPLAY NIDX ": " MYMRK (IB2) MYNAME (IB1) "."
+               IF MYNAME (NIDX) = "Fred"
+                  MOVE "Freddy" TO MYNAME (NIDX)
+               END-IF
+           END-PERFORM.
+           SET NIDX  TO IB1
+           DISPLAY NIDX ": " MYNAME (IB1) " ... The End!".
+
+           PERFORM VARYING IB2 FROM 1 BY 1 UNTIL IB2 > MAXIDX
+               SET IB1   TO IB2
+      * MF: Using wrong INDEX is warning and does not work
+      *        DISPLAY MYMRK (IB1) MYNAME (IB1)
+
+               SET NIDX  TO IB1
+               SET MYIDX TO IB1
+               DISPLAY NIDX ": " MYMRK (IB2) MYNAME (IB1) "."
+               IF MYNAME (IB1) = "Fred"
+                  MOVE "Freddy" TO MYNAME (IB1)
+               END-IF
+           END-PERFORM.
+           STOP RUN.
+           END PROGRAM prog.
+       
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. SUBN.
+       DATA DIVISION.
+       LINKAGE SECTION.
+       01  n PIC S9(9) COMP-5.
+       PROCEDURE DIVISION USING BY VALUE n.
+           DISPLAY 'Number is ' n.
+       END PROGRAM SUBN.
+])
+
+AT_CHECK([$COMPILE -x -std=mf -debug -Wall -debug -O prog.cob ], [0], [], [prog.cob:24: warning: SET TO should be an integer
+prog.cob:25: warning: source is non-numeric - substituting zero
+prog.cob:26: warning: SET IB2 TO 10 is out of bounds
+prog.cob:55: warning: SET IB1 TO -9 is out of bounds
+prog.cob:56: warning: SET IB1 TO 300 is out of bounds
+])
+
+AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [Initial value: +01
+Number is +0000000042
+Number is +0000000002
+Number is +0000000001
+Number is +0000000003
++01: A: Fred    .
++02: B: Barney  .
++03: C: Wilma   .
++04: D: Betty   .
++05: A: B: C: ... The End!
++01: A: Freddy  .
++02: B: Barney  .
++03: C: Wilma   .
+], [])
+
+AT_CLEANUP
+
